--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^18.1.0",
     "react-fast-marquee": "^1.3.2",
     "react-helmet": "^6.1.0",
+    "react-phone-input-2": "^2.15.1",
     "react-yandex-metrika": "^2.6.0"
   }
 }
