--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gatsby-source-filesystem": "^4.18.0",
     "gatsby-transformer-remark": "^5.18.0",
     "gatsby-transformer-sharp": "^4.18.0",
+    "query-string": "^7.1.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-fast-marquee": "^1.3.2",
