--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@splidejs/react-splide": "^0.7.8",
     "gatsby": "^4.18.0",
     "gatsby-plugin-anchor-links": "^1.2.1",
+    "gatsby-plugin-facebook-pixel": "^1.0.8",
     "gatsby-plugin-google-gtag": "^4.18.0",
     "gatsby-plugin-image": "^2.18.0",
     "gatsby-plugin-manifest": "^4.18.0",
